# boon-circuit

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  README.md
crates/boon_3mf/: Cargo.toml
crates/boon_3mf/src/: lib.rs  tests.rs
crates/boon_app_package/: Cargo.toml
crates/boon_app_package/src/: browser.rs  build.rs  bundle.rs  lib.rs  manifest.rs
crates/boon_app_package/testdata/paired/: app.toml
crates/boon_app_package/testdata/triple/: app.toml
crates/boon_app_package/tests/: package.rs
crates/boon_app_server/: Cargo.toml
crates/boon_app_server/src/: lib.rs  main.rs  tests.rs  transient_host.rs
crates/boon_compiler/: Cargo.toml
crates/boon_compiler/src/: distributed_compiler.rs  document_executable_backend.rs  document_plan_backend.rs  legacy_backend.rs  lib.rs  machine_plan_backend.rs  machine_plan_backend_tests.rs  tests.rs
crates/boon_compiler/src/machine_plan_backend_tests/: bytes.rs  cells.rs  todomvc.rs  verifier_and_tamper.rs
crates/boon_compiler/tests/: nested_boolean_match.rs
crates/boon_host_runtime/: Cargo.toml
crates/boon_host_runtime/src/: content_store.rs  lib.rs
crates/boon_host_runtime/tests/: content_store.rs  file_content_effects.rs  file_read_stream.rs  host_services.rs
crates/boon_http_client/: Cargo.toml
crates/boon_http_client/src/: capability.rs  client.rs  dns.rs  lib.rs  types.rs
crates/boon_http_client/tests/: loopback.rs
crates/boon_http_runtime/: Cargo.toml
crates/boon_http_runtime/src/: lib.rs
crates/boon_http_runtime/tests/: loopback.rs
crates/boon_native_app_window/: Cargo.toml
crates/boon_native_app_window/src/: error.rs  event.rs  lib.rs  runner.rs  sensitive_input.rs  surface.rs  tests.rs
crates/boon_native_app_window/src/tests/: accessibility.rs  input_timing_and_cursor.rs  proof_and_readback.rs  render_result_revisions.rs  reports_and_telemetry.rs  scheduler_and_frame_pacing.rs  surface_and_present_modes.rs
crates/boon_native_gpu/: Cargo.toml
crates/boon_native_gpu/src/: lib.rs  map.rs  tests.rs
crates/boon_native_gpu/src/tests/: document_primitives.rs  generic_renderer_core.rs  map_viewport.rs  readback_and_proof.rs  render_graph.rs  retained_quads.rs  text_and_fonts.rs
crates/boon_native_playground/: Cargo.toml
crates/boon_native_playground/src/: budget.rs  catalog.rs  compile.rs  desktop.rs  dev.rs  dev_state.rs  distributed_program.rs  frame.rs  language.rs  main.rs  map_host.rs  native_input.rs  observer.rs  passkey_simulator.rs  preview.rs  program_bundle.rs  proof.rs  protocol.rs  readiness.rs  runtime_view.rs  transient_host.rs  ui.rs  verify.rs  view.rs  workspace.rs  workspace_control.rs
crates/boon_persistence/: Cargo.toml
crates/boon_persistence/src/: codec.rs  lib.rs  migration.rs  native.rs  web.rs  worker.rs
crates/boon_persistence/tests/: data_reexport.rs  web_indexeddb.rs
crates/boon_plan/: Cargo.toml
crates/boon_plan/src/: binary.rs  document.rs  host.rs  lib.rs  tests.rs
crates/boon_plan/tests/: data_reexport.rs
crates/boon_plan_executor/: Cargo.toml
crates/boon_plan_executor/src/: cursor.rs  effect_stream.rs  lib.rs  machine.rs  session.rs  tests.rs
crates/boon_plan_executor/src/tests/: bytes_execution.rs  indexed_updates_and_deltas.rs  list_execution.rs  root_updates.rs  scenario_reports.rs  source_route_reports.rs
crates/boon_plan_executor/tests/: fjordpulse_server_search.rs  typed_list_cross_target.rs
crates/boon_ply_playground/: Cargo.toml
crates/boon_ply_playground/src/: lib.rs  main.rs
crates/boon_query_redb/: Cargo.toml
crates/boon_query_redb/src/: lib.rs
crates/boon_query_redb/tests/: persistence.rs
crates/boon_report_schema/: Cargo.toml
crates/boon_report_schema/src/: lib.rs  tests.rs
crates/boon_report_schema/src/tests/: common_identity.rs  native_gpu_aggregate.rs  native_gpu_reports.rs  refresh_queue.rs
crates/boon_runtime/: Cargo.toml
crates/boon_runtime/benches/: todomvc.rs
crates/boon_runtime/src/: content_ref.rs  distributed.rs  document.rs  effect_host.rs  effects.rs  host_capability.rs  lib.rs  migration_scenario.rs  persistent.rs  program.rs  tests.rs  web_persistent.rs
crates/boon_runtime/src/distributed/: client.rs  client_session.rs  endpoint.rs  link.rs  message.rs  server.rs  (+2 more)
crates/boon_server_host/: Cargo.toml
crates/boon_server_host/src/: config.rs  distributed_session.rs  host.rs  lib.rs  program.rs  types.rs
crates/boon_server_host/tests/: distributed_session.rs  loopback.rs
crates/boon_server_runtime/: Cargo.toml
crates/boon_server_runtime/src/: distributed_sessions.rs  exact_call_host.rs  in_process.rs  lib.rs
crates/boon_server_runtime/tests/: distributed_session_auth.rs  distributed_session_loopback.rs  fjordpulse_http_contract.rs  in_process.rs  loopback.rs
crates/boon_transport_json/: Cargo.toml
crates/boon_transport_json/src/: decode.rs  encode.rs  lib.rs
crates/boon_transport_json/tests/: data_boundary.rs  golden.rs  limits.rs  properties.rs  wasm.rs
crates/boon_typecheck/: Cargo.toml
crates/boon_typecheck/src/: lib.rs  tests.rs
crates/boon_web_effect_host/: Cargo.toml  README.md
crates/boon_web_effect_host/src/: content_store.rs  file_effect_host.rs  lib.rs
crates/boon_web_host/: Cargo.toml  README.md
crates/boon_web_host/src/: capability.rs  client_effect_host.rs  core.rs  distributed_session.rs  document_runtime.rs  error.rs  gpu.rs  input.rs  lib.rs  map_interaction.rs  map_tile.rs  scheduler.rs  semantic.rs  sensitive_input.rs  startup.rs  storage.rs  support.rs
crates/boon_web_host/static/: index.html  world_scene_host.js
crates/boon_web_host/tests/: distributed_session.rs  document_runtime.rs  foundation.rs  map_integration.rs  startup.rs  storage.rs  storage_wasm.rs
crates/boon_wellen_host/: Cargo.toml
crates/boon_wellen_host/src/: lib.rs
crates/boon_wellen_host/tests/: waveform.rs
crates/boon_wire/: Cargo.toml
crates/boon_wire/src/: client_session_frame.rs  lib.rs  session_control.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: architecture.rs  fjordpulse_traceability.rs  gates.rs  main.rs  report_v2.rs  shaders.rs  tests.rs
(+576 files in other folders)
