[workspace]
members = [
    "crates/boon_effect_schema",
    "crates/boon_example_manifest",
    "crates/boon_parser",
    "crates/boon_typecheck",
    "crates/boon_ir",
    "crates/boon_plan",
    "crates/boon_persistence",
    "crates/boon_plan_executor",
    "crates/boon_compiler",
    "crates/boon_runtime",
    "crates/boon_cli",
    "crates/boon_document_model",
    "crates/boon_host",
    "crates/boon_document",
    "crates/boon_editor",
    "crates/boon_native_gpu",
    "crates/boon_native_app_window",
    "crates/boon_native_playground",
    "crates/xtask",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.88"

[workspace.dependencies]
boon_effect_schema = { path = "crates/boon_effect_schema" }
boon_example_manifest = { path = "crates/boon_example_manifest" }
boon_parser = { path = "crates/boon_parser" }
boon_typecheck = { path = "crates/boon_typecheck" }
boon_ir = { path = "crates/boon_ir" }
boon_plan = { path = "crates/boon_plan" }
boon_persistence = { path = "crates/boon_persistence" }
boon_plan_executor = { path = "crates/boon_plan_executor" }
boon_compiler = { path = "crates/boon_compiler" }
boon_runtime = { path = "crates/boon_runtime" }
boon_document_model = { path = "crates/boon_document_model" }
boon_host = { path = "crates/boon_host" }
boon_document = { path = "crates/boon_document" }
boon_editor = { path = "crates/boon_editor" }
boon_native_gpu = { path = "crates/boon_native_gpu" }
boon_native_app_window = { path = "crates/boon_native_app_window" }
app_window = { git = "https://github.com/BoonLang/app_window.git", rev = "6aec9831f281df355736df28a4c3aacdef7cf8a1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2.2"
toml = "0.9"
web-time = "1.1.0"
sha2 = "0.10"
chumsky = "0.9"
ena = "0.14"
bytemuck = { version = "1.25", features = ["derive"] }
encase = "0.12"
ropey = "1.6"
unicode-segmentation = "1.13"
arboard = { version = "3.6", default-features = false, features = ["wayland-data-control"] }
image = { version = "0.24.9", default-features = false, features = ["jpeg", "png", "webp"] }
minicbor = { version = "2.2.2", features = ["std"] }
open = "5.3"
redb = "4.1.0"
uuid = { version = "1.23", features = ["v4"] }
resvg = { version = "0.47.0", default-features = false }
wgpu = "=29.0.1"
glyphon = "=0.11.0"
wgsl_bindgen = "=0.22.2"
futures = "0.3"
libc = "0.2"
evdev = "0.13.2"
wayland-client = "0.31.14"
wayland-protocols = { version = "0.32.12", features = ["client", "staging"] }
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols", rev = "160b086abe03cd34a8a375d7fbe47b24308d1f38", default-features = false, features = ["client"] }

[profile.dev.package.boon_document]
opt-level = 2

[profile.dev.package.boon_native_app_window]
opt-level = 2

[profile.dev.package.boon_native_gpu]
opt-level = 2

[profile.dev.package.boon_native_playground]
opt-level = 2

[profile.dev.package.glyphon]
opt-level = 2

[profile.dev.package.image]
opt-level = 2

[profile.dev.package.png]
opt-level = 2

[profile.dev.package.fdeflate]
opt-level = 2

[profile.dev.package.flate2]
opt-level = 2

[profile.dev.package.miniz_oxide]
opt-level = 2

[profile.dev.package.crc32fast]
opt-level = 2

[profile.dev.package.wgpu]
opt-level = 2
