[workspace]
members = [
    "crates/boon_data",
    "crates/boon_effect_schema",
    "crates/boon_example_manifest",
    "crates/boon_parser",
    "crates/boon_typecheck",
    "crates/boon_ir",
    "crates/boon_plan",
    "crates/boon_persistence",
    "crates/boon_plan_executor",
    "crates/boon_transport_json",
    "crates/boon_server_host",
    "crates/boon_server_runtime",
    "crates/boon_http_client",
    "crates/boon_http_runtime",
    "crates/boon_query",
    "crates/boon_query_redb",
    "crates/boon_app_package",
    "crates/boon_app_cli",
    "crates/boon_app_server",
    "crates/boon_compiler",
    "crates/boon_runtime",
    "crates/boon_cli",
    "crates/boon_document_model",
    "crates/boon_host",
    "crates/boon_host_services",
    "crates/boon_host_runtime",
    "crates/boon_document",
    "crates/boon_editor",
    "crates/boon_native_gpu",
    "crates/boon_web_host",
    "crates/boon_native_app_window",
    "crates/boon_native_playground",
    "crates/xtask",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.88"

[workspace.dependencies]
boon_data = { path = "crates/boon_data" }
boon_effect_schema = { path = "crates/boon_effect_schema" }
boon_example_manifest = { path = "crates/boon_example_manifest" }
boon_parser = { path = "crates/boon_parser" }
boon_typecheck = { path = "crates/boon_typecheck" }
boon_ir = { path = "crates/boon_ir" }
boon_plan = { path = "crates/boon_plan" }
boon_persistence = { path = "crates/boon_persistence" }
boon_plan_executor = { path = "crates/boon_plan_executor" }
boon_transport_json = { path = "crates/boon_transport_json" }
boon_server_host = { path = "crates/boon_server_host" }
boon_server_runtime = { path = "crates/boon_server_runtime" }
boon_http_client = { path = "crates/boon_http_client" }
boon_http_runtime = { path = "crates/boon_http_runtime" }
boon_query = { path = "crates/boon_query" }
boon_query_redb = { path = "crates/boon_query_redb" }
boon_app_package = { path = "crates/boon_app_package" }
boon_app_server = { path = "crates/boon_app_server" }
boon_compiler = { path = "crates/boon_compiler" }
boon_runtime = { path = "crates/boon_runtime" }
boon_document_model = { path = "crates/boon_document_model" }
boon_host = { path = "crates/boon_host" }
boon_host_services = { path = "crates/boon_host_services" }
boon_host_runtime = { path = "crates/boon_host_runtime" }
boon_document = { path = "crates/boon_document" }
boon_editor = { path = "crates/boon_editor" }
boon_native_gpu = { path = "crates/boon_native_gpu" }
boon_web_host = { path = "crates/boon_web_host" }
boon_native_app_window = { path = "crates/boon_native_app_window" }
app_window = { git = "https://github.com/BoonLang/app_window.git", rev = "6aec9831f281df355736df28a4c3aacdef7cf8a1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2.2"
toml = "0.9"
web-time = "1.1.0"
sha2 = "0.10"
chumsky = "0.9"
ena = "0.14"
bytemuck = { version = "1.25", features = ["derive"] }
encase = "0.12"
ropey = "1.6"
unicode-segmentation = "1.13"
arboard = { version = "3.6", default-features = false, features = ["wayland-data-control"] }
image = { version = "0.24.9", default-features = false, features = ["jpeg", "png", "webp"] }
minicbor = { version = "2.2.2", features = ["std"] }
open = "5.3"
redb = "4.1.0"
uuid = { version = "1.23", features = ["v4"] }
resvg = { version = "0.47.0", default-features = false }
wgpu = "=29.0.1"
glyphon = "=0.11.0"
wgsl_bindgen = "=0.22.2"
futures = "0.3"
getrandom = "0.3.4"
hmac = "0.12.1"
libc = "0.2"
evdev = "0.13.2"
wayland-client = "0.31.14"
wayland-protocols = { version = "0.32.12", features = ["client", "staging"] }
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols", rev = "160b086abe03cd34a8a375d7fbe47b24308d1f38", default-features = false, features = ["client"] }
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["ws"] }
form_urlencoded = "1.2.2"
percent-encoding = "2.3.2"
ipnet = "2.11.0"
fs2 = "0.4.3"
reqwest = { version = "0.13.4", default-features = false }
tokio = { version = "1.52.4", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.29.0"
url = "2.5.7"
wasm-bindgen-cli-support = "=0.2.121"
zeroize = "1.8.2"

[profile.dev.package.boon_document]
opt-level = 2

[profile.dev.package.boon_native_app_window]
opt-level = 2

[profile.dev.package.boon_native_gpu]
opt-level = 2

[profile.dev.package.boon_native_playground]
opt-level = 2

[profile.dev.package.glyphon]
opt-level = 2

[profile.dev.package.image]
opt-level = 2

[profile.dev.package.png]
opt-level = 2

[profile.dev.package.fdeflate]
opt-level = 2

[profile.dev.package.flate2]
opt-level = 2

[profile.dev.package.miniz_oxide]
opt-level = 2

[profile.dev.package.crc32fast]
opt-level = 2

[profile.dev.package.wgpu]
opt-level = 2
