[package]
name = "boon_3mf"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
boon_manufacturing.workspace = true
boon_solid_model.workspace = true
earcutr.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
