[package]
name = "boon_app_package"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
build = ["dep:wasm-bindgen-cli-support"]

[dependencies]
boon_persistence.workspace = true
boon_plan.workspace = true
boon_runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
wasm-bindgen-cli-support = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.23.0"
wat = "1.240.0"

