[package]
name = "boon_app_server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "boon-app-server"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
boon_app_package.workspace = true
boon_persistence.workspace = true
boon_plan.workspace = true
boon_server_host.workspace = true
boon_server_runtime.workspace = true
boon_runtime.workspace = true
fs2.workspace = true
ipnet.workspace = true
tokio.workspace = true
url.workspace = true

[dev-dependencies]
futures.workspace = true
reqwest.workspace = true
tempfile = "3.23.0"
tokio-tungstenite.workspace = true
