[package]
name = "boon_compiler"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
boon_ir.workspace = true
boon_parser.workspace = true
boon_plan.workspace = true
boon_typecheck.workspace = true
serde.workspace = true
sha2.workspace = true
toml.workspace = true

[dev-dependencies]
