[package]
name = "boon_host_runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
boon_effect_schema.workspace = true
boon_host_services.workspace = true
boon_plan.workspace = true
boon_runtime.workspace = true
getrandom.workspace = true
sha2.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3.27.0"
