[package]
name = "boon_http_client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
percent-encoding.workspace = true
reqwest = { workspace = true, features = ["http2", "rustls"] }
tokio.workspace = true

[dev-dependencies]
axum.workspace = true
tokio = { workspace = true, features = ["io-util"] }
