[package]
name = "boon_http_runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
boon_effect_schema.workspace = true
boon_http_client.workspace = true
boon_plan.workspace = true
boon_runtime.workspace = true
tokio.workspace = true

[dev-dependencies]
axum.workspace = true
