[package]
name = "boon_native_app_window"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
accesskit.workspace = true
boon_host.workspace = true
boon_scene_model.workspace = true
boon_solid_model.workspace = true
serde.workspace = true
app_window.workspace = true
wgpu.workspace = true
futures.workspace = true
image.workspace = true
sha2.workspace = true
serde_json.workspace = true
