[package]
name = "boon_native_app_window"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
boon_host.workspace = true
app_window.workspace = true
futures.workspace = true
wgpu.workspace = true

[dev-dependencies]
toml.workspace = true
