[package]
name = "boon_native_gpu"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
boon_document.workspace = true
boon_host.workspace = true
boon_scene_model.workspace = true
bytemuck.workspace = true
encase.workspace = true
serde.workspace = true
serde_json.workspace = true
wgpu.workspace = true
glyphon.workspace = true
image.workspace = true
resvg.workspace = true
sha2.workspace = true

[dev-dependencies]
boon_solid_model.workspace = true
futures.workspace = true
