[package]
name = "boon_native_playground"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
boon_runtime.workspace = true
boon_compiler.workspace = true
boon_parser.workspace = true
boon_ir.workspace = true
boon_typecheck.workspace = true
boon_document.workspace = true
boon_document_model.workspace = true
boon_editor.workspace = true
boon_host.workspace = true
boon_native_gpu.workspace = true
boon_native_app_window.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
toml.workspace = true
arboard.workspace = true
wgpu.workspace = true
libc.workspace = true
open.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
evdev.workspace = true
wayland-client.workspace = true
wayland-protocols.workspace = true
cosmic-protocols.workspace = true
