[package]
name = "boon_persistence"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
boon_plan.workspace = true
minicbor.workspace = true
serde.workspace = true
sha2.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
redb.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures.workspace = true
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = "0.3"
rexie = "0.6.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "DomException",
    "Navigator",
    "StorageManager",
    "Window",
    "WorkerGlobalScope",
    "WorkerNavigator",
] }

[dev-dependencies]
tempfile = "3.27.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
