[package]
name = "boon_plan"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
boon_data.workspace = true
boon_effect_schema.workspace = true
boon_document_model.workspace = true
boon_query.workspace = true
serde.workspace = true
sha2.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
