[package]
name = "boon_plan_executor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
boon_data.workspace = true
boon_plan.workspace = true
boon_persistence.workspace = true
boon_query.workspace = true
serde.workspace = true

[dev-dependencies]
boon_compiler.workspace = true
