[package]
name = "boon_ply_playground"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
boon_ir.workspace = true
boon_parser.workspace = true
boon_runtime.workspace = true
ply-engine.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
