[package]
name = "boon_query_redb"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
boon_data.workspace = true
boon_query.workspace = true
ciborium.workspace = true
redb.workspace = true
serde.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile = "3.27"
