[package]
name = "boon_report_schema"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
boon_compiler.workspace = true
boon_ir.workspace = true
boon_parser.workspace = true
boon_plan.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true
