[package]
name = "boon_runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
boon_compiler.workspace = true
boon_document_model.workspace = true
boon_plan.workspace = true
boon_plan_executor.workspace = true
serde.workspace = true
sha2.workspace = true
toml.workspace = true

[dev-dependencies]
boon_document.workspace = true
