[package]
name = "boon_runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
boon_compiler.workspace = true
boon_data.workspace = true
boon_document_model.workspace = true
boon_example_manifest.workspace = true
boon_persistence.workspace = true
boon_plan.workspace = true
boon_plan_executor.workspace = true
boon_wire.workspace = true
ciborium.workspace = true
serde.workspace = true
sha2.workspace = true
toml.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1.1.0"

[dev-dependencies]
boon_document.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
futures.workspace = true
js-sys = "0.3"
wasm-bindgen-test = "0.3"
