[package]
name = "boon_server_host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
form_urlencoded.workspace = true
futures.workspace = true
ipnet.workspace = true
percent-encoding.workspace = true
tokio.workspace = true
boon_wire.workspace = true

[dev-dependencies]
reqwest.workspace = true
tokio-tungstenite.workspace = true
