[package]
name = "boon_server_runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
boon_effect_schema.workspace = true
boon_plan.workspace = true
boon_persistence.workspace = true
boon_runtime.workspace = true
boon_server_host.workspace = true
boon_wire.workspace = true
ciborium.workspace = true
serde.workspace = true
sha2.workspace = true

[dev-dependencies]
boon_data.workspace = true
boon_host_runtime.workspace = true
futures.workspace = true
reqwest.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tempfile = "3.27.0"
