[package]
name = "boon_transport_json"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
boon_data.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["unbounded_depth"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
