[package]
name = "boon_typecheck"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
boon_data.workspace = true
boon_document_model.workspace = true
boon_effect_schema.workspace = true
boon_parser.workspace = true
ena.workspace = true
serde.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time.workspace = true
