[package]
name = "boon_web_effect_host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
boon_app_package.workspace = true
boon_effect_schema.workspace = true
boon_plan.workspace = true
boon_runtime.workspace = true
getrandom.workspace = true
sha2.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
idb = { version = "0.6.5", default-features = false, features = ["builder"] }
js-sys = "0.3.98"
wasm-bindgen = "0.2.121"
wasm-bindgen-futures = "0.4.71"
web-sys = { version = "0.3.98", features = [
    "AbortController",
    "AbortSignal",
    "Blob",
    "File",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "Request",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "Window",
    "WritableStream",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
