[package]
name = "boon_wellen_host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
boon_effect_schema.workspace = true
boon_host_runtime.workspace = true
boon_plan.workspace = true
boon_runtime.workspace = true
wellen.workspace = true

[dev-dependencies]
sha2.workspace = true
tempfile = "3.27.0"
tokio.workspace = true
