[package]
name = "boon_wire"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
boon_data.workspace = true
getrandom.workspace = true
minicbor.workspace = true
zeroize.workspace = true

[dev-dependencies]
serde.workspace = true
static_assertions.workspace = true
