[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
boon_ir.workspace = true
boon_parser.workspace = true
boon_runtime.workspace = true
boon_document.workspace = true
boon_document_model.workspace = true
boon_host.workspace = true
boon_native_app_window.workspace = true
boon_native_gpu.workspace = true
image.workspace = true
serde_json.workspace = true
wgsl_bindgen.workspace = true
