[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
accesskit.workspace = true
boon_bridge.workspace = true
boon_ir.workspace = true
boon_parser.workspace = true
boon_plan.workspace = true
boon_runtime.workspace = true
boon_typecheck.workspace = true
boon_document.workspace = true
boon_document_model.workspace = true
boon_scene_model.workspace = true
boon_solid_model.workspace = true
boon_manufacturing.workspace = true
boon_3mf.workspace = true
boon_mesh_export.workspace = true
boon_web_host.workspace = true
boon_driver.workspace = true
boon_host.workspace = true
boon_native_app_window.workspace = true
boon_native_gpu.workspace = true
futures.workspace = true
flate2.workspace = true
image.workspace = true
serde_json.workspace = true
toml.workspace = true
wgpu.workspace = true
wgsl_bindgen.workspace = true
